# ClearDNS

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  asset.sh  init.sh  load.sh  tools.sh
assets/: README.md  china-ip.py  chinalist.py  gfwlist.py
include/: common.h  constant.h  constant.h.in  dnsproxy.h  exit_code.h  flag.h  loader.h  overture.h  process.h  to_json.h
include/applet/: adguard.h  crontab.h  dnsproxy.h  overture.h
include/bcrypt/: bcrypt.h
include/common/: common.h  constant.h  json.h  structure.h  sundry.h  system.h
include/loader/: config.h  default.h  loader.h  parser.h
include/utils/: assets.h  logger.h  process.h  str.h  strList.h  structure.h  toJSON.h
list-build/chinalist/: build.sh  source.sh
list-build/gfwlist/: build.sh  source.sh
overture/: config.yml  update.sh
smartdns/: base.conf  load.sh
src/: CMakeLists.txt  Cargo.toml  cleardns.c  common.c  common_legacy.c  demo.c  dnsproxy.c  overture.c  process.c  process_legacy.c
src/applet/: CMakeLists.txt  adguard.c  crontab.c  dnsproxy.c  overture.c
src/assets/: Cargo.toml  cbindgen.toml
src/assets/src/: fetch.rs  ffi.rs  lib.rs  main.rs
src/bcrypt/: CMakeLists.txt  bcrypt.c  hash.c
src/bcrypt/blowfish/: CMakeLists.txt
src/common/: CMakeLists.txt  common.c  json.c  structure.c  sundry.c  system.c
src/load/: CMakeLists.txt  json.c  load.c
src/loader/: CMakeLists.txt  config.c  default.c  loader.c  parser.c
src/to-json/: Cargo.toml  cbindgen.toml  to_json.h
src/to-json/src/: convert.rs  ffi.rs  json.rs  lib.rs  parser.rs  tests.rs
src/to-json/tests/: convert.rs
src/utils/: CMakeLists.txt  assets.c  cJSON.c  json.c  logger.c  process.c  str.c  strList.c  structure.c  toJSON.c
to-json/: Cargo.toml  test.json  test.toml  test.yaml
to-json/src/: main.rs
toJSON/: main.go
toJSON-legacy/: go.mod  main.go
