[package]
name = "assets"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls", "deflate", "gzip", "brotli"] }
reqwest-middleware = "0.2.1"
reqwest-retry = "0.2.2"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
