[package]
name = "assets"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
env_logger = "0.10.0"
log = "0.4.19"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "deflate", "gzip", "brotli"] }
reqwest-middleware = "0.2.2"
reqwest-retry = "0.2.2"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
