[package]
name = "assets"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
env_logger = "0.10.1"
log = "0.4.20"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "deflate", "gzip", "brotli"] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.2.3"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
